# multi-agent-langgraph

./: .gitignore  CLAUDE.md  README.md  conversation_history.json  main.py  mcp_config.py  mcp_tools.py  pyproject.toml  web_search.py
src/: __init__.py  main.py
src/mcp_client/: __init__.py  config.py  direct_client.py  tools.py
src/mcp_client/tools/: __init__.py  core.py  file_search.py  mcp_wrappers.py
src/servers/: __init__.py  filesystem_server.py  web_search_server.py
