[project]
name = "multi-agent-langgraph"
version = "1.0.0"
description = "Multi-Agent LangGraph Chatbot with Real MCP Server Integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama",
    "langchain-core",
    "pydantic",
    "mcp",
    "fastmcp",
    "langgraph>=0.6.7",
    "requests>=2.32.5",
]

# Run command: uv run python -m src.main or python src/main.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

